--- a/visu/designs/alaska_slim/basic.css
+++ b/visu/designs/alaska_slim/basic.css
@@ -82,16 +82,12 @@ div#top {
   text-decoration: none;
 }
 
-.colspan0 { /* multiple of 8.33333% ! */
-  width: 33.33332%;
+.colspandefault { /* in units of 1/12 screen width */
+  width: 4px;
 }
 
 .widget_container {
   float: left;
-}
-
-.widget_container .widget_container {
-    width: 100%;
 }
 
 .widget
