--- a/visu/designs/discreet_sand/basic.css
+++ b/visu/designs/discreet_sand/basic.css
@@ -74,16 +74,12 @@ div#top {
   vertical-align: middle;
 }
 
-.colspan0 { /* multiple of 8.33333% ! */
-  width: 49.9998%;
+.colspandefault { /* in units of 1/12 screen width */
+  width: 6px;
 }
 
 .widget_container {
   float: left;
-}
-
-.widget_container .widget_container {
-    width: 100%;
 }
 
 .widget
